# Legs

./: .gitignore  compile_commands.json
src/legs_control/: CMakeLists.txt  package.xml
src/legs_control/include/legs_control/: pd_controller.hpp  trajectory_generator.hpp
src/legs_control/src/: ik_node.cpp  step.cpp
src/legs_description/: CMakeLists.txt  package.xml
src/legs_description/config/: controllers.yaml  mujoco_ros2_control_plugins.yaml
src/legs_description/launch/: bringup.launch.py
src/legs_description/meshes/final_stl/: body_v3_urdf.STL  femur_L_FINAL.STL  femur_R_FINAL.STL  foot_v4.STL  hip.STL  tibia_final.STL  tibia_full_v2.STL  tibia_longer.STL
src/legs_description/mujoco/: bipedal copy.xml  bipedal.xml  bipedal_test.xml  scene.xml
src/legs_description/rviz/: bipedal.rviz
src/legs_description/scripts/: odom_to_tf.py
src/legs_description/src/: bipedal.xml  urdf_2_xml.py
src/legs_description/urdf/: legs_feet.urdf
src/legs_dynamics/: CMakeLists.txt  ROBOT_MODEL_PLAN.md  package.xml
src/legs_dynamics/include/legs_dynamics/: robot_model.hpp
src/legs_dynamics/src/: robot_model.cpp
src/legs_dynamics/test/: test_robot_model.cpp
src/utilities/: CMakeLists.txt  package.xml  robot_class_plan.md
src/utilities/include/utilities/: leg.hpp  robot.hpp  robot_state.hpp  transforms.hpp
src/utilities/src/: a.out  fk.cpp  ik.cpp  leg.cpp  robot.cpp  robot_test.cpp  transforms.cpp
